k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  labels:
    app.kubernetes.io/name: resume
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: resume
  template:
    metadata:
      labels:
        app.kubernetes.io/name: resume
    spec:
      containers:
      # - env:
      #   name: env
      #     value: dev
      - name: resume-container
        imagePullPolicy: Always
        image: lauming1111/resume:resume-backend
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
      imagePullSecrets:
        - name: dockerhub-secret




# docker tag resume-backend:latest lauming1111/resume:resume-backend
# docker push lauming1111/resume:resume-backend
# kubectl apply -f k8s/deployment.yaml
# kubectl rollout restart deployment resume
