k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend-ip
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: resume
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001

# kubectl get svc
# kubectl describe service service-backend-ip
# kubectl apply -f k8s/service.yaml
